# vadiarize-grpc

./: Cargo.toml  config.yaml  rustfmt.toml
example/: Cargo.toml
example/src/: main.rs
silero_vad/: Cargo.toml
silero_vad/src/: error.rs  lib.rs  recognizer.rs  silero.rs  utils.rs  vad_iter.rs
silero_vad/src/tools/: time.rs
src/: main.rs
vad_grpc/: Cargo.toml  build.rs
vad_grpc/proto/: vad_grpc.proto
vad_grpc/src/: controller.rs  lib.rs  main.rs  settings.rs
vad_grpc/src/pb/: mod.rs
vad_grpc/src/service/: mod.rs  vad.rs
vad_grpc/src/tools/: grpc.rs  mod.rs  transcode.rs  wav.rs
