[package]
name = "vadiarize_grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.12", features = ["gzip", "tls"]}
tonic-types = "0.12"
tonic-reflection = "0.12"
prost = "0.13"
prost-derive = "0.13"
tokio = { version = "1.41", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
config = "0.14"
anyhow = "1.0"
thiserror = "2"
log = { version = "0.4", features = ["std"] }
env_logger = { version = "0.11", default-features = false, features = ["color"]}
futures = "0.3.31"
voice-stream = { version = "0.3.0", features = ["windows"]}
parking_lot = { version = "0.12", features = ["hardware-lock-elision", "serde", "deadlock_detection", "arc_lock"] }