[package]
name = "silero_vad"
version.workspace = true
edition.workspace = true
description = "Silero VAD tools"

[dependencies]
ort.workspace = true
ort-sys.workspace = true
hound.workspace = true
ndarray.workspace = true
lazy_static.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
lockfree-object-pool.workspace = true
heapless.workspace = true
